--- a/app/src/main/res/layout/item_employees.xml
+++ b/app/src/main/res/layout/item_employees.xml
@@ -21,7 +21,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:text="Very important note" />
+            tools:text="Name Name Name Name Name" />
 
 
 
