calculate Age different versions

--- a/app/src/main/res/layout/item_employees.xml
+++ b/app/src/main/res/layout/item_employees.xml
@@ -5,23 +5,44 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="4dp">
+    android:layout_marginHorizontal="16dp"
+    android:layout_marginVertical="8dp"
+    >
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
+        <ImageView
+            android:id="@+id/ivEmployees"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:src="@drawable/ic_non_image_24"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <TextView
             android:id="@+id/tvName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textStyle="bold"
+            android:textColor="@color/cardview_dark_background"
+            android:textSize="18sp"
 
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            android:layout_margin="10dp"
+            app:layout_constraintStart_toEndOf="@+id/ivEmployees"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="Name Name Name Name Name" />
+
+        <TextView
+            android:id="@+id/tvAge"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+
+            app:layout_constraintStart_toEndOf="@+id/ivEmployees"
+            app:layout_constraintTop_toBottomOf="@+id/tvName"
+            tools:text="100 лет" />
 
 
 
