--- a/app/src/main/res/layout/item_employees.xml
+++ b/app/src/main/res/layout/item_employees.xml
@@ -20,7 +20,8 @@
             android:layout_height="100dp"
             android:src="@drawable/ic_non_image_24"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            android:contentDescription="@string/employe_photo_description"/>
 
         <TextView
             android:id="@+id/tvFName"
