--- a/app/src/main/res/layout/fragment_detail_employees.xml
+++ b/app/src/main/res/layout/fragment_detail_employees.xml
@@ -9,45 +9,46 @@
 
     <ImageView
         android:id="@+id/ivEmployees"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_width="110dp"
+        android:layout_height="110dp"
+        android:contentDescription="@string/employe_photo_description"
+        android:padding="10dp"
         android:src="@drawable/ic_non_image_24"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:contentDescription="@string/employe_photo_description" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tvFName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+        android:layout_marginVertical="5dp"
         android:textColor="@color/cardview_dark_background"
 
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ivEmployees"
-        tools:text="Name Name Name Name Name" />
+        tools:text="Name" />
 
     <TextView
         android:id="@+id/tvLName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+        android:layout_marginVertical="5dp"
         android:textColor="@color/cardview_dark_background"
 
         android:textSize="18sp"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/tvFName"
         app:layout_constraintTop_toBottomOf="@+id/tvFName"
-        tools:text="LName LName LName LName Name" />
+        tools:text="LName"/>
 
     <TextView
         android:id="@+id/tvBirthday"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+        android:layout_marginVertical="5dp"
 
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/tvFName"
         app:layout_constraintTop_toBottomOf="@+id/tvLName"
         tools:text="100 лет" />
 
@@ -55,9 +56,9 @@
         android:id="@+id/tvSpecialties"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+        android:layout_marginVertical="5dp"
 
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/tvFName"
         app:layout_constraintTop_toBottomOf="@+id/tvBirthday"
         tools:text="Specialties, Specialties" />
 
